# actor-server

./: .gitignore  CMakeLists.txt  FindLibcaf.cmake  README.md  configure
actor_server/: handler.hpp  http_listener.hpp  http_server_connection.hpp
src/: event_switch.cpp  event_switch.h  http_listener.cpp  http_server_connection.cpp  main.cpp  web_socket_server.cpp  web_socket_server.h
